results/classifier/zero-shot/108/other/1553
graphic: 0.872
files: 0.846
socket: 0.785
device: 0.779
network: 0.542
PID: 0.480
semantic: 0.448
vnc: 0.445
debug: 0.276
permissions: 0.223
boot: 0.147
performance: 0.086
other: 0.040
KVM: 0.023

Build error: implicit declaration of function 'qemu_close_to_socket'
Description of problem:
When build the latest master code with MSYS2 on Windows 10, GCC reports:
../ui/spice-core.c: In function 'watch_remove':
../ui/spice-core.c:152:5: error: implicit declaration of function 'qemu_close_to_socket' [-Werror=implicit-function-declaration]
  152 |     qemu_close_to_socket(watch->fd);
      |     ^~~~~~~~~~~~~~~~~~~~
../ui/spice-core.c:152:5: error: nested extern declaration of 'qemu_close_to_socket' [-Werror=nested-externs]
Steps to reproduce:
1. ./configure --enable-sdl --enable-gtk --target-list=arm-softmmu,aarch64-softmmu
2. cd build
3. make
